[project]
name = "Code-the-Classics"
requires-python = ">=3.11"

[tool.ruff]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
]
fixable = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
    "UP"  # pyupgrade
]
src = [
    "boing",
]
exclude = [
    "bunner",
    "cavern",
    "myriapod",
    "soccer",
]
builtins = [
    # pyzero builtins
    "Actor",
    "Rect",
    "ZRect",
    "animate",
    "clock",
    "exit",
    "images",
    "keyboard",
    "keymods",
    "keys",
    "mouse",
    "music",
    "screen",
    "sounds",
    "storage",
    "tone",
]
